--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: default
       {% if paginator.next_page %}
         <a class="newer-posts" href={{ "/page" | prepend: site.baseurl | append: paginator.next_page }}>&larr; Older posts</a>
       {% endif %}
-      <span class="page-number">Page {{ paginator.page }} of {{ paginator.total_pages }}</span>
+      <span class="page-number">Sidan {{ paginator.page }} av {{ paginator.total_pages }}</span>
       {% if paginator.previous_page %}
         {% if paginator.page == 2 %}
           <a class="older-posts" href={{ "/" | prepend: site.baseurl }}>Newer posts &rarr;</a>
